--- a/style.css
+++ b/style.css
@@ -1,13 +1,72 @@
 :root{
-   --cor-de-fundo: #1e1e1e;
-   --verde: #5FFF57;
-   --branco: #FFFFFF;
-   --botao-ativo: #3A375E;
-   --botao-inativo: rgba(58,55,94,0.5);
-   --texto-fundo: rgba(58,55,94,0.3);
+    --cor-de-fundo:#0000;
+    --verde:#5FFF57;
+    --branco:#FFFFFF;
+    --botao-ativo:#3a357e;
+    --botao-inativo:#rgb(58,55,94,0.5);
+    --texto-fundo:#rgb(58,55,94,0.3);
 }
 
 *{
-    background-color: var(--cor-de-fundo);
-    color: var(--branco);    
+    background-color: crimson;
+    color: #FFFFFF;
+
+}
+
+.conteudo-principal{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+
+}
+
+.titulo-principal{
+    text-align: center;
+    width: 100%;
+    font-size: 32px;
+}
+
+.botao{
+    background-color: #356fec;
+    color: #FFFFFF;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-size: 18px;
+    padding: 1cm;
+    border-bottom:4px #5FFF57;
+    border-left:2px #ffffff;
+    border-right:2px #ffffff;
+
+}
+
+.botoes{
+    display: block;
+}
+
+.botao:first-child{
+    border-radius: 20px 0px 0px 20px;
+}
+
+.botao:last-child{
+    border-radius: 0px 0px 20px 20px;
+}
+
+@media screen and (min-width: 700px){
+    .botoes{
+        display: flex;
+    }
+
+    .botao:first-child{
+        border-radius: 20px 0px 0px 20px;
+    }
+
+    .botao:last-child{
+        border-radius: 0px 20px 20px 0px    ;
+    }
+    
 }
