--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 *{
-    background-color: crimson;
+    background-color: rgb(0, 0, 0);
     color: #FFFFFF;
 
 }
@@ -31,8 +31,8 @@
 }
 
 .botao{
-    background-color: #356fec;
-    color: #FFFFFF;
+    background-color: #3a3a3a;
+    color: #ffffff;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -55,6 +55,11 @@
 .botao:last-child{
     border-radius: 0px 0px 20px 20px;
 }
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 2px solid var(--verde);
+}
+
 
 @media screen and (min-width: 700px){
     .botoes{
@@ -70,3 +75,4 @@
     }
     
 }
+
